introduce new implementations of XHubConverter not relying on jaxb, add unit tests to compare to old converters